# talos

./: .gitignore  .venv  CONSTITUTION.md  README.md  identity.md  pyproject.toml  requirements.txt  test_ci.py  tool_registry.py
cortex/: __main__.py  automated_vacuum.py  causal_logger.py  cognitive_path_optimizer.py  cortex_pruner.py  cse_engine.py  cse_pattern_extractor.py  cse_synthesizer.py  dashboard_collector.py  debug_sel.py  divergence_monitor.py  evolution_engine.py  evolution_manager.py  execute_foresight.py  execute_scribe.py  external_impact_synthesizer.py  foresight.py  gap_analyzer.py  git_status_tool.py  git_synthesizer.py  handover_manager.py  heartbeat.py  heartbeat.sh  hec_promoter.py  heuristic_manager.py  heuristic_reviewer.py  hud_builder.py  interface_latency_monitor.py  internal_primitive_resolver.py  log_tail_tool.py  memory_store.py  metabolic_registry.py  metabolic_tuner.py  pattern_analyzer.py  pivot_logic.py  primitive_resolver.py  quantum_latency_diagnostician.py  quantum_latency_monitor.py  redundancy_scanner.py  repo_mapper.py  (+87 more)
memory/: .agent_state.json  .identity_lkg  CANONICAL_PATH.md  CONSTITUTION.md  OBSERVER_DIRECTIVE.md  Sovereign_Core.md  analytics.json  bash_toolbox.md  blueprint_of_intent.md  cef_plan.md  cognitive_essence.md  cognitive_paths.json  cognitive_state.json  compressed_trajectory.md  conceptual_map.json  continuity.py  cortex_map.json  creator_intent_graph.json  current_state.md  dcm_mesh.json  dcm_proposal.md  density_noise.json  divergence_audit.md  epoch_v_manifesto.md  evolution_canonical.md  evolution_detailed.md  (+64 more)
(+232 files in other folders)
