[project]
name = "talos"
version = "2.0.0"
description = "Talos Bare Minimum — Self-evolving autonomous agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
testpaths = ["tests"]